munge/tests/ui/move_while_borrowed.stderr
error[E0505]: cannot move out of `mu` because it is borrowed
  --> tests/ui/move_while_borrowed.rs:19:26
   |
12 |     let mut mu = MaybeUninit::<Example>::uninit();
   |         ------ binding `mu` declared here
13 |
14 |     munge!(let Example { a, b } = &mut mu);
   |                                   ------- borrow of `mu` occurs here
...
19 |     let value = unsafe { mu.assume_init() };
   |                          ^^ move out of `mu` occurs here
...
23 |     a.write(3);
   |     ---------- borrow later used here
